# connect4

./: .gitignore  config.py  draft.py  draft_parallel.py  generation.py  pyproject.toml
output/moves_sequences/: my_simulations.pkl  test.pkl
src/connect4/: app.py  board.py  game.py  gameState.py  gameStateTree.py  game_state.py  game_state_tree.py  make_decision.py  moves_sequence.py  utils.py  value_functions.py
src/connect4/templates/: board.html
tests/: conftest.py
tests/integration_tests/: integration_game_test.py  test_game_integration.py  test_moves_sequence_integration.py
tests/unit/: test_board.py
tests/unit_tests/: test_game.py  test_game_state.py  test_game_state_tree.py  test_value_function.py
