[project]
name = "connect4"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Matthieu Mbarga Owona", email = "matthieu.mbargaowona@gmail.com"},
]
dependencies = []
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
