[project]
name = "connect4"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Matthieu Mbarga Owona", email = "matthieu.mbargaowona@gmail.com"},
]
dependencies = ["numpy>=2.2.1", "typing>=3.7.4.3", "pytest>=8.3.4"]
requires-python = "==3.13.0"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
